<resources>
    <string name="app_name">Seguros</string>
    <string name="logo">logo</string>
    <string name="acceder">Acceder</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="descripcion_icono">Icono que abre un menu PopUp</string>
    <string name="a_adir_cliente">añadir cliente</string>
    <string name="buscar_un_cliente">Buscar un cliente</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="introduce_cliente">introduce cliente</string>
    <string name="buscar">buscar</string>
    <string name="eliminar_cliente">eliminar cliente</string>
    <string name="button">Button</string>
    <string name="introduce_nombre_cliente">Introduce nombre cliente</string>
    <string name="mostrar_todos">mostrar todos</string>
</resources>
